--- a/module3-sampling-confidence/LS_DS_123_Confidence_Intervals_Lecture.ipynb
+++ b/module3-sampling-confidence/LS_DS_123_Confidence_Intervals_Lecture.ipynb
@@ -53,7 +53,7 @@
       },
       "source": [
         "\n",
-        "**The purpose of a confidence interval for a one-sample t-test is to allow us to ___________________.**"
+        "**The purpose of a confidence interval for a one-sample t-test is to allow us to draw conclusions about the true value of the population mean.**"
       ]
     },
     {
@@ -166,7 +166,7 @@
         "\n",
         "When we make brownies, we make an informal confidence interval for how long it will take for them to bake based on the recipe and our baking knowledge.\n",
         "\n",
-        "**When we make a confidence interval for a population mean, we will use information from _________ and mathematical properties of the _____________.**"
+        "**When we make a confidence interval for a population mean, we will use information from our sample and mathematical properties of the t-destribution.**"
       ]
     },
     {
@@ -187,7 +187,7 @@
         "id": "VhV8zLlYtF4M"
       },
       "source": [
-        "Where $\\bar{X}$ is the sample _______, s is the sample ___________ and n is the sample _________.\n",
+        "Where $\\bar{X}$ is the sample Sample Mean, s is the sample Standard Deviation and n is the sample size.\n",
         "\n",
         "Note that $\\frac{s}{\\sqrt{n}}$ is the standard error, which is an estimate of the true standard error of the sample mean.  \n",
         "\n",
@@ -234,7 +234,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "fGaZspmft1Jg"
+        "id": "fGaZspmft1Jg",
+        "outputId": "e33e4d29-f24d-4f99-cd86-8a35ec08e4e5",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 224
+        }
       },
       "source": [
         "import pandas as pd\n",
@@ -248,7 +253,96 @@
         "print(df.shape)\n",
         "df.head()\n"
       ],
-      "execution_count": null,
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "(223, 2)\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>ID</th>\n",
+              "      <th>Body_temp</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>36</td>\n",
+              "      <td>96.7</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>254</td>\n",
+              "      <td>96.9</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>282</td>\n",
+              "      <td>97.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>286</td>\n",
+              "      <td>97.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>302</td>\n",
+              "      <td>97.0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "    ID  Body_temp\n",
+              "0   36       96.7\n",
+              "1  254       96.9\n",
+              "2  282       97.0\n",
+              "3  286       97.0\n",
+              "4  302       97.0"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 1
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "b5zjLuu-42GM"
+      },
+      "source": [
+        "sample_mean = df['Body_temp'].mean()"
+      ],
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -275,7 +369,8 @@
         "id": "CXbaQDV6uviK"
       },
       "source": [
-        "#Calculate mean"
+        "#Calculate mean\n",
+        "sample_mean = df['Body_temp'].mean()"
       ],
       "execution_count": null,
       "outputs": []
@@ -286,9 +381,10 @@
         "id": "lBM_l8vovvW9"
       },
       "source": [
-        "#Calculate SD"
+        "#Calculate SD\n",
+        "sd = df['Body_temp'].std()"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -297,9 +393,10 @@
         "id": "iDmBJP6JwRCa"
       },
       "source": [
-        "#Calculate n"
+        "#Calculate n\n",
+        "n = df.shape[0]"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -314,13 +411,28 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "FiCestjGw3ym"
+        "id": "FiCestjGw3ym",
+        "outputId": "fbb12c3f-5c8f-4b47-da6d-20ae51074853",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "#Calculate SE"
+        "#Calculate SE\n",
+        "\n",
+        "SE = sd/(n**(1/2))\n",
+        "print(SE)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0.035310940220425246\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -352,7 +464,7 @@
         "\n",
         "Then we are going to add and subtract some number of standard errors from the sample mean to get the range of values that will be our confidence interval.\n",
         "\n",
-        "**t* is the number that tells us how many _____________ to add and subtract from the sample mean in the CI formula.**\n",
+        "**t* is the number that tells us how many Standard Errors to add and subtract from the sample mean in the CI formula.**\n",
         "\n",
         "How do we calculate t*?"
       ]
@@ -398,9 +510,9 @@
         "id": "wOMBTcNe4Nx5"
       },
       "source": [
-        "In fact, **the CLT tells us to expect _________% of sample means to be within about __________ standard errors of the population mean.**\n",
+        "In fact, **the CLT tells us to expect 95% of sample means to be within about 2 standard errors of the population mean.**\n",
         "\n",
-        "The reason that we say \"about\" 2 is that the exact number of standard errors we need to add and subtract to be 95% confident about the population mean will depend on our sample size in the form of the degrees of freedom (___________ - 1)."
+        "The reason that we say \"about\" 2 is that the exact number of standard errors we need to add and subtract to be 95% confident about the population mean will depend on our sample size in the form of the degrees of freedom (n - 1)."
       ]
     },
     {
@@ -439,10 +551,33 @@
         "#how to calculate a 95% CI this easy way in just a minute.\n",
         "\n",
         "#Recall that n = 223 for the body temp problem.\n",
-        "t_star = t.ppf(0.975,df=???????)"
+        "t_star = t.ppf(0.975,df=223)"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZNcC_vPk-iOF",
+        "outputId": "2a1aca2d-5921-4157-83c5-21f3a6f4fa7a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "print(t_star)"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1.970658960834481\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -471,27 +606,64 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "9LeY2Usv80uR"
+        "id": "9LeY2Usv80uR",
+        "outputId": "d880b58f-464b-4a19-9649-35af03c38a43",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "#recall that we calculated mean_bodytem etc. above.\n",
         "\n",
         "#Calculate the lower confidence limit\n",
-        "\n"
+        "lower_cl = sample_mean - t_star*SE\n",
+        "lower_cl"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "98.09543660076376"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 15
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "gkkpkRf09IH3"
+        "id": "gkkpkRf09IH3",
+        "outputId": "1d18fb23-dd90-4ae7-d5e4-cbc033a31ea3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "#Calculate the upper confidence limit"
+        "#Calculate the upper confidence limit\n",
+        "upper_cl = sample_mean + t_star*SE\n",
+        "upper_cl"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "98.23460824228552"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 17
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -499,7 +671,7 @@
         "id": "4M3IaJbp9w9d"
       },
       "source": [
-        "In conclusion, we are 95% confident that the population mean healthy human body temperature is between ?????????"
+        "In conclusion, we are 95% confident that the population mean healthy human body temperature is between 98.1 and 98.2 degrees F."
       ]
     },
     {
@@ -514,7 +686,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ZrIe9Q6G-PRw"
+        "id": "ZrIe9Q6G-PRw",
+        "outputId": "1cd867b7-ed5a-4c28-88ad-a115643fbc82",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "#We can use the t.interval funtion to calculate the CI.\n",
@@ -522,10 +698,24 @@
         "#scale parameter equal to the SE\n",
         "#Alpha = 0.95 means we want a 95% CI\n",
         "\n",
-        "#Calculate your t-interval here."
+        "#Calculate your t-interval here.\n",
+        "t.interval(0.95, 222, loc = sample_mean, scale = SE)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(98.09543489049658, 98.2346099525527)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 18
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -552,35 +742,89 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "dE4rPilLAket"
+        "id": "dE4rPilLAket",
+        "outputId": "e88a5d85-52be-4837-9b11-7fc35d882c84",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "#90% Confidence Interval"
+        "#90% Confidence Interval\n",
+        "t.interval(0.9, 222, loc = sample_mean, scale = SE)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(98.106697704594, 98.22334713845528)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 19
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "tBx71Kf0UjT3"
+        "id": "tBx71Kf0UjT3",
+        "outputId": "f3b141a5-8f08-4787-da5b-6f3f4905b56c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "#95% Confidence Interval"
+        "#95% Confidence Interval\n",
+        "t.interval(0.95, 222, loc = sample_mean, scale = SE)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(98.09543489049658, 98.2346099525527)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 21
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "tZO8TYrqBoDx"
+        "id": "tZO8TYrqBoDx",
+        "outputId": "89b90004-a1c7-4999-df6a-2234bb64e723",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "#99% Confidence Interval\n"
+        "#99% Confidence Interval\n",
+        "t.interval(0.99, 222, loc = sample_mean, scale = SE)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(98.0732790800297, 98.25676576301957)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 20
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -596,9 +840,9 @@
         "\n",
         "Confidence intervals are a trade-off between accuracy and precision.\n",
         "\n",
-        "**The more _________ you want to be, the less _________ your CI will be.**\n",
+        "**The more confident you want to be, the less narrower your CI will be.**\n",
         "\n",
-        "**The less ____________ you are willing to be, the more ___________ your estimate can be.**\n",
+        "**The less confident you are willing to be, the more narrower your estimate can be.**\n",
         "\n",
         "At the point we were 100% confident, our CI would probably be meaningless."
       ]
@@ -676,10 +920,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "fp6Ws3j5G2n_",
-        "outputId": "500a7777-b616-43bd-976d-ce1193e7bc21",
+        "outputId": "bb22455f-6267-4239-ad42-c21986cbab1e",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 221
+          "height": 540
         }
       },
       "source": [
@@ -694,7 +938,7 @@
         "print(df.shape)\n",
         "df.head()"
       ],
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
@@ -809,7 +1053,50 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 31
+          "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "g9u-y9X8F0QH"
+      },
+      "source": [
+        "mean_age = df['Age'].mean()\n",
+        "std_age = df['Age'].std()\n",
+        "n = df.shape[0]\n",
+        "se_age = std_age/(n**(1/2)) "
+      ],
+      "execution_count": 25,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rXl3lFNiGRdf",
+        "outputId": "0a17f264-db3d-4e8f-e64b-8b3dacb9f580",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "print(mean_age)\n",
+        "print(std_age)\n",
+        "print(n)\n",
+        "print(se_age)"
+      ],
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "29.471443066516347\n",
+            "14.121908405462555\n",
+            "887\n",
+            "0.4741672781626\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -827,13 +1114,32 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "iIpBrdXUIx2A"
+        "id": "iIpBrdXUIx2A",
+        "outputId": "00405cae-43de-4d83-b69d-7f1fa1f4b59e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "#Calculate t-interval here."
+        "from scipy.stats import t\n",
+        "\n",
+        "t.interval(0.95,df = 886, loc=mean_age, scale = se_age)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(28.540820985809045, 30.40206514722365)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 30
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -841,7 +1147,9 @@
         "id": "VPejVZDsF84m"
       },
       "source": [
-        "CI interval interpretation here."
+        "CI interval interpretation here.\n",
+        "\n",
+        "We are 95% confident that population mean age of all travellers from Western Europe to the US in early 19 century is between 28.5 and 30.4"
       ]
     }
   ]
