--- a/module3-sampling-confidence/LS_DS_123_Confidence_Intervals_Assignment_CHECK.ipynb
+++ b/module3-sampling-confidence/LS_DS_123_Confidence_Intervals_Assignment_CHECK.ipynb
@@ -80,29 +80,122 @@
       },
       "source": [
         "# Import your libraries and load the data\n",
+        "import pandas as pd\n",
+        "import matplotlib.pyplot as plt\n",
+        "import numpy as np\n",
+        "from scipy.stats import t\n",
         "\n",
-        "### your code here ###\n"
+        "coke_df = pd.read_csv('https://raw.githubusercontent.com/Chelsea-Myers/Lambda-Intro/master/Coke.csv',\n",
+        "                      skipinitialspace = True, header = 0)"
       ],
-      "execution_count": null,
+      "execution_count": 41,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "pYsFvm1dPygj"
+        "id": "pYsFvm1dPygj",
+        "outputId": "75f5cd4c-1b92-4177-87af-441dfb1d373c",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 224
+        }
       },
       "source": [
         "# Take a look at your data\n",
         "\n",
-        "### your code here ###\n"
+        "print(coke_df.shape)\n",
+        "coke_df.head()\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "(50, 2)\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Drink</th>\n",
+              "      <th>Caffeine</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>1</td>\n",
+              "      <td>47.32</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>2</td>\n",
+              "      <td>43.78</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>3</td>\n",
+              "      <td>48.12</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>4</td>\n",
+              "      <td>43.25</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>5</td>\n",
+              "      <td>46.42</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   Drink  Caffeine\n",
+              "0      1     47.32\n",
+              "1      2     43.78\n",
+              "2      3     48.12\n",
+              "3      4     43.25\n",
+              "4      5     46.42"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 42
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "igi_7D8S17Gg"
+        "id": "igi_7D8S17Gg",
+        "outputId": "10977f65-75d7-4842-a4d4-1d875d3c4f87",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "# This is an ANSWER CHECK cell.\n",
@@ -115,8 +208,16 @@
         "assert coke_df.shape == (50, 2), 'Is your data loaded with the correct argument?'\n",
         "print('Correct! Continue to the next question')"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Correct! Continue to the next question\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -140,16 +241,23 @@
         "id": "m1vuFGxVQo64"
       },
       "source": [
-        "### your code here ###\n",
-        "\n"
+        "\n",
+        "mean_caffeine = coke_df['Caffeine'].mean()\n",
+        "sd_caffeine = coke_df['Caffeine'].std()\n",
+        "n_caffeine = coke_df.shape[0]\n",
+        "se_caffeine = sd_caffeine/(n_caffeine**(1/2))  \n"
       ],
-      "execution_count": null,
+      "execution_count": 44,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "5qorI8MB9G0c"
+        "id": "5qorI8MB9G0c",
+        "outputId": "6a7a48cf-b2df-4a30-d055-09a447f620dd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "# This is an ANSWER CHECK cell.\n",
@@ -163,8 +271,16 @@
         "assert round(se_caffeine, 2) == 0.74, 'Check the standard error value'\n",
         "print('Correct! Continue to the next question')"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Correct! Continue to the next question\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -198,7 +314,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ti9x37XSQ_yL"
+        "id": "ti9x37XSQ_yL",
+        "outputId": "24d12543-2b8a-4c71-99b8-86872207a3e0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "# Import the stats library\n",
@@ -212,16 +332,28 @@
         "\n",
         "### your code here: fill in the degrees of freedom ###\n",
         "\n",
-        "t_star = t.ppf(0.975, #YOUR CODE#)\n",
+        "t_star = t.ppf(0.975, df=49)\n",
         "print('t_star =', t_star)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "t_star = 2.009575234489209\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "7N34GArqCuhY"
+        "id": "7N34GArqCuhY",
+        "outputId": "ce809306-e10c-440a-d371-b8530a30cd42",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "# This is an ANSWER CHECK cell.\n",
@@ -232,8 +364,16 @@
         "assert round(t_star) == 2, 'Check the dof you entered!'\n",
         "print('Correct! Continue to the next question')"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Correct! Continue to the next question\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -251,15 +391,20 @@
         "id": "IjjYtXodJW-b"
       },
       "source": [
-        "### your code here ###\n"
+        "### your code here ###\n",
+        "m_err = t_star*se_caffeine"
       ],
-      "execution_count": null,
+      "execution_count": 55,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "s0w_f66zDn31"
+        "id": "s0w_f66zDn31",
+        "outputId": "2422fcb6-f920-46c4-b63e-da4fd318819c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "# This is an ANSWER CHECK cell.\n",
@@ -270,8 +415,16 @@
         "assert round(m_err, 2) == 1.49, 'Did you multiply m_err by the correct value?'\n",
         "print('Correct! Continue to the next question')"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Correct! Continue to the next question\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -288,7 +441,7 @@
         "id": "ePBmVZU7N2nq"
       },
       "source": [
-        "SHORT ANSWER TEXT HERE"
+        "Margin error is 1.49mg of caffeine per can of soft drink."
       ]
     },
     {
@@ -311,15 +464,20 @@
         "id": "JPUE0osGEw0M"
       },
       "source": [
-        "### your code here ###\n"
+        "lower_CL = mean_caffeine - m_err\n",
+        "upper_CL = mean_caffeine + m_err\n"
       ],
-      "execution_count": null,
+      "execution_count": 50,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "yPBvD9x6FMZU"
+        "id": "yPBvD9x6FMZU",
+        "outputId": "82e3a371-b034-4f60-f6ee-361ce9a29c83",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "# This is an ANSWER CHECK cell.\n",
@@ -331,8 +489,16 @@
         "assert round(upper_CL, 2) == 39.43, 'Check your upper CL calculation.'\n",
         "print('Correct! Continue to the next question')"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Correct! Continue to the next question\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -349,15 +515,48 @@
         "id": "GSo4uKWVFKwQ"
       },
       "source": [
-        "### your code here ###\n"
+        "### your code here ###\n",
+        "t_int_95 = t.interval(alpha = 0.95, df = 49, loc = mean_caffeine, scale = se_caffeine)"
       ],
-      "execution_count": null,
+      "execution_count": 79,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "oTCZbc82GgHX"
+        "id": "ymmMuOlX0xLI",
+        "outputId": "9bc3a7ff-086e-4dd8-daa5-4c39a9f25f8c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "t_int_95"
+      ],
+      "execution_count": 80,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(36.44994080039434, 39.43045919960566)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 80
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "oTCZbc82GgHX",
+        "outputId": "aa0a6dac-59a9-4dbe-9648-6ff228ec381e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "# This is an ANSWER CHECK cell.\n",
@@ -369,8 +568,16 @@
         "assert round(t_int_95[1], 2) == 39.43, 'Check your interval calculation.'\n",
         "print('Correct! Continue to the next question')"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 81,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Correct! Continue to the next question\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -405,7 +612,7 @@
         "id": "hD5HloatYxoh"
       },
       "source": [
-        "SHORT ANSWER TEXT HERE"
+        "We are 95% confident that population mean of caffeine content in a 12-oz Coke lies between 36.5 mg and 39.4 mg."
       ]
     },
     {
@@ -420,18 +627,41 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "r1y1LE_dPAi6"
+        "id": "r1y1LE_dPAi6",
+        "outputId": "3723cfb9-8c62-4fb4-f076-4cbacac95166",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "### your code here ###\n"
+        "### your code here ###\n",
+        "t_int_90 = t.interval(0.9, df = 49, loc = mean_caffeine, scale = se_caffeine)\n",
+        "t_int_90"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 83,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(36.696904726749196, 39.1834952732508)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 83
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "HQggp0yKMpXL"
+        "id": "HQggp0yKMpXL",
+        "outputId": "3f007a87-7a83-4dbe-96e7-f73bd34bfd99",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "# This is an ANSWER CHECK cell.\n",
@@ -443,8 +673,16 @@
         "assert round(t_int_90[1], 2) == 39.18, 'Check your interval calculation.'\n",
         "print('Correct! Continue to the next question')"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 84,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Correct! Continue to the next question\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -461,7 +699,7 @@
         "id": "7WIQtB0PGJP4"
       },
       "source": [
-        "SHORT ANSWER TEXT HERE"
+        "90% CI is more precise but less accurate. "
       ]
     },
     {
@@ -478,13 +716,31 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "YrKq5pXYPNnK"
+        "id": "YrKq5pXYPNnK",
+        "outputId": "75297035-f1e7-49c9-c3bf-51a5ab458196",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "### your code here ###\n"
+        "t_int_99 = t.interval(0.99, df = 49, loc = mean_caffeine, scale = se_caffeine)\n",
+        "t_int_99\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 85,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(35.95280335285685, 39.92759664714315)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 85
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -519,7 +775,7 @@
         "id": "liduCGIkJAC2"
       },
       "source": [
-        "SHORT ANSWER TEXT HERE"
+        "99% CI is more accurate but less precise. "
       ]
     },
     {
@@ -558,6 +814,17 @@
       ]
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "magGNME6X79A"
+      },
+      "source": [
+        "Margin of error would become smaller. "
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "6lVcoTU6L5Pg"
@@ -572,11 +839,11 @@
         "id": "PQkk3nu4L4vu"
       },
       "source": [
-        "t_star = t.ppf(0.975,df=###)\n",
+        "t_star = t.ppf(0.975,df=99)\n",
         "\n",
         "### your code here ###"
       ],
-      "execution_count": null,
+      "execution_count": 86,
       "outputs": []
     },
     {
@@ -585,7 +852,7 @@
         "id": "5bZ8LyiQXnpO"
       },
       "source": [
-        "SHORT ANSWER TEXT HERE\n"
+        "We would get a smaller more presice CI.\n"
       ]
     }
   ]
