--- a/module4-bayesian/LS_DS_124_Bayesian_Inference_Assignment.ipynb
+++ b/module4-bayesian/LS_DS_124_Bayesian_Inference_Assignment.ipynb
@@ -41,7 +41,7 @@
         "id": "VHo7IAIFMNRT"
       },
       "source": [
-        "Your answer here."
+        "Both have different approach to finding probabilities of events as well as different lines of thought. "
       ]
     },
     {
@@ -58,7 +58,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "qXaf5leo7CHr"
+        "id": "qXaf5leo7CHr",
+        "outputId": "52872b18-4cd3-44d9-d43b-dfeda35658f9",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 540
+        }
       },
       "source": [
         "import pandas as pd\n",
@@ -72,8 +77,124 @@
         "print(df.shape)\n",
         "df.head()"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "(887, 8)\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Survived</th>\n",
+              "      <th>Pclass</th>\n",
+              "      <th>Name</th>\n",
+              "      <th>Sex</th>\n",
+              "      <th>Age</th>\n",
+              "      <th>Siblings/Spouses_Aboard</th>\n",
+              "      <th>Parents/Children_Aboard</th>\n",
+              "      <th>Fare</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>0</td>\n",
+              "      <td>3</td>\n",
+              "      <td>Mr. Owen Harris Braund</td>\n",
+              "      <td>male</td>\n",
+              "      <td>22.0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>7.2500</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>Mrs. John Bradley (Florence Briggs Thayer) Cum...</td>\n",
+              "      <td>female</td>\n",
+              "      <td>38.0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>71.2833</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>1</td>\n",
+              "      <td>3</td>\n",
+              "      <td>Miss. Laina Heikkinen</td>\n",
+              "      <td>female</td>\n",
+              "      <td>26.0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>7.9250</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>Mrs. Jacques Heath (Lily May Peel) Futrelle</td>\n",
+              "      <td>female</td>\n",
+              "      <td>35.0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>53.1000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>0</td>\n",
+              "      <td>3</td>\n",
+              "      <td>Mr. William Henry Allen</td>\n",
+              "      <td>male</td>\n",
+              "      <td>35.0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>8.0500</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   Survived  Pclass  ... Parents/Children_Aboard     Fare\n",
+              "0         0       3  ...                       0   7.2500\n",
+              "1         1       1  ...                       0  71.2833\n",
+              "2         1       3  ...                       0   7.9250\n",
+              "3         1       1  ...                       0  53.1000\n",
+              "4         0       3  ...                       0   8.0500\n",
+              "\n",
+              "[5 rows x 8 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 59
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -81,19 +202,81 @@
         "id": "4shP8MH8CbrZ"
       },
       "source": [
-        "2) Calculate P(A) = P(Surving)"
+        "2) Calculate P(A) = P(Surving)\n",
+        "\n",
+        " P(A) = 0.39"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "iDi0eFr1x-v_"
+        "id": "iDi0eFr1x-v_",
+        "outputId": "f188b596-f4b9-44bc-e943-a372458edf25",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 143
+        }
       },
       "source": [
-        "### YOUR CODE HERE"
+        "pd.crosstab(index = df['Survived'], columns = 'Survival rate', normalize='columns' )"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th>col_0</th>\n",
+              "      <th>Survival rate</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Survived</th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>0.614431</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>0.385569</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "col_0     Survival rate\n",
+              "Survived               \n",
+              "0              0.614431\n",
+              "1              0.385569"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 60
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -101,19 +284,86 @@
         "id": "ZV_UsohfC6r_"
       },
       "source": [
-        "3) Calculate P(B) = P(Being a 1st class passenger)"
+        "3) Calculate P(B) = P(Being a 1st class passenger)\n",
+        "\n",
+        "P(B) = 0.24"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "wcBGNBoQL6iS"
+        "id": "wcBGNBoQL6iS",
+        "outputId": "7718f250-d1c9-479b-a0d0-0c8a7697178e",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 175
+        }
       },
       "source": [
-        "### YOUR CODE HERE"
+        "pd.crosstab(df['Pclass'], columns = 'Class Odds', normalize = 'columns')\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 62,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th>col_0</th>\n",
+              "      <th>Class Odds</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Pclass</th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>0.243517</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>0.207441</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>0.549042</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "col_0   Class Odds\n",
+              "Pclass            \n",
+              "1         0.243517\n",
+              "2         0.207441\n",
+              "3         0.549042"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 62
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -121,19 +371,91 @@
         "id": "3tJKQmH-Cm6u"
       },
       "source": [
-        "4) Calculate P(A $\\cap$ B) = P(Being a 1st class passenger and surviving)"
+        "4) Calculate P(A $\\cap$ B) = P(Being a 1st class passenger and surviving)\n",
+        "\n",
+        "P(A ∩ B) = 0.15"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "9Nr8LWPyL7P6"
+        "id": "9Nr8LWPyL7P6",
+        "outputId": "bb5965a0-4c17-4a73-8b41-541f9effc81d",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 175
+        }
       },
       "source": [
-        "### YOUR CODE HERE"
+        "pd.crosstab(df['Pclass'], df['Survived'], normalize = 'index')"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 64,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th>Survived</th>\n",
+              "      <th>0</th>\n",
+              "      <th>1</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Pclass</th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>0.370370</td>\n",
+              "      <td>0.629630</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>0.527174</td>\n",
+              "      <td>0.472826</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>0.755647</td>\n",
+              "      <td>0.244353</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "Survived         0         1\n",
+              "Pclass                      \n",
+              "1         0.370370  0.629630\n",
+              "2         0.527174  0.472826\n",
+              "3         0.755647  0.244353"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 64
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -141,19 +463,10 @@
         "id": "VzHakDD6DOcL"
       },
       "source": [
-        "5) Calculate P(A|B) = P(Surviving given that the person was a 1st class passenger)"
+        "5) Calculate P(A|B) = P(Surviving given that the person was a 1st class passenger)\n",
+        "\n",
+        "P(A|B) = 0.62"
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "TxrNmmzZL7zw"
-      },
-      "source": [
-        "### YOUR CODE HERE"
-      ],
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -161,19 +474,10 @@
         "id": "XLHGkgqIDZvi"
       },
       "source": [
-        "6) Calculate (B|A) = P(Being a first class passenger given the person survived)"
+        "6) Calculate (B|A) = P(Being a first class passenger given the person survived)\n",
+        "\n",
+        "P(B|A) = 0.38"
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "9_8-BEipL8U5"
-      },
-      "source": [
-        "### YOUR CODE HERE"
-      ],
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -191,13 +495,31 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "P0k0E5OKL9C-"
+        "id": "P0k0E5OKL9C-",
+        "outputId": "e3304c7a-a0ce-436b-f5ba-a173424668f2",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
       },
       "source": [
-        "### YOUR CODE HERE"
+        "0.15 / 0.24"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 76,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.625"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 76
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -215,13 +537,31 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "w_sbMMAUL9qH"
+        "id": "w_sbMMAUL9qH",
+        "outputId": "552c03be-c6c1-4381-d4fd-9bb144579949",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
       },
       "source": [
-        "### YOUR CODE HERE"
+        "0.38 * 0.39 / 0.24"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 77,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.6175"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 77
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -250,13 +590,63 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "HkUjRwhoL_h1"
+        "id": "9MpQd4VuuTbK",
+        "outputId": "a92462e0-54b9-4dc6-f081-19d5da3b18db",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
       },
       "source": [
-        "### YOUR CODE HERE"
+        "df.shape"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 88,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(887, 8)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 88
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "HkUjRwhoL_h1",
+        "outputId": "3837bf23-840b-48ac-890a-6d01f522a9a2",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "source": [
+        "from scipy import stats\n",
+        "\n",
+        "stats.t.interval(0.95, df = 886,loc = df['Fare'].mean(), \n",
+        "                 scale = df['Fare'].std()/(887**(1/2)))"
+      ],
+      "execution_count": 90,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(29.02482490325031, 35.586015457516254)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 90
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -264,7 +654,9 @@
         "id": "7eSar_NSIUvl"
       },
       "source": [
-        "Your answer here."
+        "Your answer here.\n",
+        "\n",
+        "With 95% confidence we can say that mean fare lies within 29.02 and 35.59 range "
       ]
     },
     {
@@ -279,13 +671,34 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "1NNyQKOxMHJa"
+        "id": "1NNyQKOxMHJa",
+        "outputId": "2a27c5c8-50ec-4918-9067-21cdbe6f666c",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 92
+        }
       },
       "source": [
-        "### YOUR CODE HERE"
+        "from scipy import stats\n",
+        "\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 80,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(Mean(statistic=32.30542018038331, minmax=(29.024824903250337, 35.58601545751628)),\n",
+              " Variance(statistic=2483.858450355689, minmax=(2262.747559034253, 2726.2430731483255)),\n",
+              " Std_dev(statistic=49.824230556814946, minmax=(47.568346187714496, 52.213437668365835)))"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 80
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -293,7 +706,7 @@
         "id": "VP4SMHH4MIgR"
       },
       "source": [
-        "Your answer here."
+        "With 95% confidence we can say that mean fare lies within 29.02 and 35.59 range "
       ]
     },
     {
